@@ -19,7 +19,7 @@ plan( skip_all => 'Unsupported OS' ) if not $run;
 my $url = "http://localhost:$ENV{DWIMMER_PORT}";
 my $URL = "$url/";
 
-plan( tests => 59 );
+plan( tests => 63 );
 
 my @pages = (
 	{},
@@ -437,7 +437,7 @@ is_deeply(
 	'user logged in with new password'
 );
 
-
+diag('Check if admin can change the password of another user based on uid');
 my $pw3 = 'dgjkl';
 is_deeply(
 	$admin->change_password( new_password => $pw3, admin_password => $users[0]{password}, uid => 2 ),
@@ -466,6 +466,35 @@ is_deeply(
 	'user logged in with new password'
 );
 
+
+diag('Check if admin can change the password of another user based on name');
+my $pw4 = 'ladbhlash';
+is_deeply(
+	$admin->change_password( new_password => $pw4, admin_password => $users[0]{password}, name => $users[0]{uname} ),
+	{ success => 1 }, 'password changed'
+);
+
+is_deeply( $user->logout, { success => 1 }, 'logout' );
+cmp_deeply(
+	$user->session,
+	{   logged_in => 0,
+		data      => ignore(),
+		site      => ignore(),
+
+		#	dwimmer_version => $Dwimmer::Client::VERSION,
+	},
+	'session'
+);
+
+is_deeply(
+	$user->login( username => $users[0]{uname}, password => $pw4 ),
+	{   success   => 1,
+		username  => $users[0]{uname},
+		userid    => 2,
+		logged_in => 1,
+	},
+	'user logged in with new password'
+);
 
 
 
